# nix-templates

./: LICENSE  README.md  flake.nix
clang/hello/: .envrc  Makefile.in  configure.ac  devshell.toml  flake.nix
nixos/container/: flake.nix
pandoc/report/: flake.nix
rust-bin/: Cargo.toml  README.md  devshell.toml
rust/mlua/: .envrc  Cargo.toml  README.md  flake.nix  init.lua  luaenv.nix
rust/mlua/src/: lib.rs
