[package]
name = "MYNAME"
version = "0.1.0"
edition = "2021"

[package.metadata.nix]
build = true
library = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = {version = "0.7.3", features = ["lua54", "module", "vendored", "send", "serialize"]}
anyhow = "^1.0.42"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"

# Uncomment for auto compiling c code using build.rs
# [dependencies.libc]
# version = "0.2.117"
# [build-dependencies.cc]
# version = "1.0"

# Uncomment for benching benchs/main.rs
# NOTE: rlib need to be added in crate-type for it to work
# [dev-dependencies.criterion]
# version = "0.3"
# features = ["html_reports"]
# [[bench]]
# name = "main"
# harness = false
